# quadrate

./: .build.yml  .clang-format  .gitignore  .nvim.lua  CMakeLists.txt  CONTRIBUTING.md  COPYING  Doxyfile  GEMINI.md  Makefile  PROVENANCE.md  README.md  REVIEW.md  go.mod  main.go  meson.build  meson_options.txt  test_str.qd  test_time_simple  test_time_simple.qd
cmd/quadlsp/: meson.build
cmd/quadlsp/src/: main.cc
cmd/quadlsp/tests/: README.md  test_lsp.cc  test_lsp.py  test_lsp_extended.py  test_lsp_stress.py
cmd/quadrate/: meson.build
cmd/quadrate/src/: main.cc
cmd/quaduses/: meson.build
cmd/quaduses/src/: main.cc
examples/bmi/: bmi.qd  meson.build
examples/embed/: CMakeLists.txt  incremental_test.cc  main.cc  meson.build  multi_module_test.cc  native_functions_test.cc
examples/fibonacci/: fibonacci.qd  meson.build
examples/hello-world-c/: hello-world.c  meson.build
examples/threading/: meson.build  threading.qd
examples/web-server/: meson.build  web-server.qd
lib/cgen/: CMakeLists.txt  meson.build
lib/cgen/data/: qd_main.c
lib/cgen/src/: compiler.cc  keywords.cc  linker.cc  process.cc  stack.c  transpiler.cc  writer.cc
lib/cgen/tests/: CMakeLists.txt
lib/llvmgen/: README.md  meson.build
lib/llvmgen/src/: generator.cc
lib/qc/: CMakeLists.txt  meson.build
lib/qc/src/: ast.cc  ast_node_block.h  ast_node_comment.h  ast_node_label.h  ast_printer.cc  colors.cc  error_reporter.cc  formatter.cc  semantic_validator.cc  source_formatter.cc  stack.cc
lib/qc/tests/: CMakeLists.txt  meson.build  test_ast.cc  test_semantic_validator.cc
lib/qd/: meson.build
lib/qd/src/: qd.cc
lib/qd/tests/: meson.build
lib/qdrt/: meson.build
lib/qdrt/src/: memory.c  runtime.c  stack.c
lib/qdrt/tests/: meson.build  test_runtime.c
lib/quadrate/: CMakeLists.txt  meson.build
lib/quadrate/src/: qd.c  qd.cc
lib/quadrate/tests/: meson.build  test_runtime.c
lib/runtime/: CMakeLists.txt  meson.build
lib/runtime/src/: runtime.c  stack.c
lib/runtime/tests/: meson.build  test_runtime.c
lib/stdbase64qd/: meson.build
lib/stdbase64qd/src/: base64.c
lib/stdbitsqd/: meson.build
lib/stdbitsqd/src/: bits.c
lib/stdfmtqd/: meson.build
lib/stdfmtqd/src/: fmt.c
lib/stdioqd/: meson.build
lib/stdioqd/src/: io.c
lib/stdmathqd/: meson.build
lib/stdmathqd/src/: math.c
lib/stdmemqd/: meson.build
lib/stdmemqd/src/: mem.c
lib/stdnetqd/: meson.build
lib/stdnetqd/src/: net.c
lib/stdosqd/: meson.build
lib/stdosqd/src/: os.c
tests/: README.md  README_SCRIPTS.md  meson.build  run_embed_tests.sh  run_formatter_tests.sh  run_qd_tests.sh  run_qd_tests_llvm.sh  run_qd_tests_parallel.sh  run_qd_tests_valgrind_parallel.sh  run_tests.sh  test_instructions.qd  test_rand.qd  test_sip.qd  test_str.qd  test_utils.sh  valgrind.supp
tests/expected/: advanced_stack_ops.out  arith_logarithms.out  arith_trigonometry.out  comparison_ops.out  complex_control_flow.out  extended_stack_ops.out  function_pointers.out  logic_bitwise.out  math_functions.out  module_basic.out  module_multi_import.out  new_stack_ops.out  stack_advanced.out  stack_notation.out  stack_operations.out
tests/formatter/: 10_file_imports.qd
tests/formatter/expected/: 01_basic_function.qd  03_if_else.qd  04_for_loop.qd  06_defer.qd  07_single_line_comments.qd  08_block_comments.qd  09_use_whitespace.qd  10_file_imports.qd  11_code_in_single_line_comments.qd  12_code_in_block_comments.qd  13_mixed_comments_with_code.qd  14_comment_edge_cases.qd  15_comments_near_use.qd
tests/formatter/input/: 01_basic_function.qd  02_function_params.qd  03_if_else.qd  04_for_loop.qd  05_use_statement.qd  06_defer.qd  07_single_line_comments.qd  08_block_comments.qd  09_use_whitespace.qd  11_code_in_single_line_comments.qd  12_code_in_block_comments.qd  13_mixed_comments_with_code.qd  14_comment_edge_cases.qd  15_comments_near_use.qd
tests/qd/arithmetic/: arith_basic.out  arith_basic.qd  arith_comparison.qd  arith_functions.out  arith_functions.qd  arith_logarithms.out  arith_logarithms.qd  arith_trigonometry.out  arith_trigonometry.qd  ctx_floats.out  ctx_floats.qd
tests/qd/base64/: base64_test.out  base64_test.qd
tests/qd/basic/: advanced_stack_ops.qd  arithmetic.qd  extended_stack_ops.qd  stack_operations.qd
tests/qd/casting/: cast_basic.out  cast_basic.qd
tests/qd/compile_errors/: abort_on_non_fallible.err  abort_on_non_fallible.qd  break_outside_loop.err  break_outside_loop.qd  check_on_non_fallible.err  check_on_non_fallible.qd  continue_outside_loop.err  continue_outside_loop.qd  fallible_missing_if.err  fallible_missing_if.qd  fallible_with_swap.err  fallible_with_swap.qd  file_not_found.err  file_not_found.qd  imported_fallible_missing_if.err  imported_fallible_missing_if.qd  loop_var_outside_loop.err  loop_var_outside_loop.qd  module_dir_no_entry.err  module_dir_no_entry.qd  module_not_found.qd  multiple_errors.err  multiple_errors.qd  stack_underflow.err  stack_underflow.qd  switch_duplicate_case.err  switch_duplicate_case.qd  switch_empty.err  switch_empty.qd  undefined_constant.err  undefined_constant.qd  undefined_function.err  undefined_function.qd
tests/qd/constants/: constants_scoped.qd
tests/qd/control_flow/: complex_control_flow.qd  ctx_advanced.out  ctx_advanced.qd  ctx_basic.out  ctx_basic.qd  ctx_nested.out  ctx_nested.qd  ctx_with_if.out  ctx_with_if.qd  defer_return.out  defer_return.qd  defer_simple.out  defer_simple.qd  for_loop_break.qd  for_loop_nested.out  for_loop_nested.qd  for_loop_simple.qd  function_pointers.out  function_pointers.qd  if_statement.out  if_statement.qd  loop_continue.qd  loop_nested.qd  loop_simple.qd  test_switch_break.qd  test_switch_integer.out  test_switch_integer.qd  test_switch_no_default.out  test_switch_no_default.qd  test_switch_string.out  test_switch_string.qd
tests/qd/documentation/: ctx_feature.out  ctx_feature.qd  stack_notation.out  stack_notation.qd
tests/qd/edge_cases/: all_types_struct.qd  empty_main.qd  empty_struct.qd  (+14 more)
tests/quadpm/: test_quadpm.sh
tests/quaduses/: 13_preserve_file_imports.qd  14_file_and_module_mix.qd
(+542 files in other folders)
